<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="choose_icon_title">Choose Icon</string>
    <string name="done">Done</string>
    <string name="category_all">All</string>
    <string name="category_general">General</string>
    <string name="category_connectivity">Connectivity</string>
    <string name="category_sound">Sound</string>
    <string name="category_display">Display</string>
    <string name="category_media">Media</string>
    <string name="category_system">System</string>
    <string name="category_battery">Battery</string>
    <string name="category_apps">Apps</string>
    <string name="category_security">Security</string>
    <string name="category_time">Time</string>
    <string name="category_location">Location</string>
    <string name="icon_color">Color</string>
</resources>
